feat: add utils

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-skeleton",
+  "name": "component-skeleton-ui",
   "private": true,
   "version": "0.0.1",
   "description": "Quickly create a VUE framework for mobile",
