--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "packageManager": "pnpm@8.1.0",
   "devDependencies": {
-    "eslint": "8.57.0",
+    "eslint": "^9.0.0",
     "husky": "^8.0.3"
   },
   "repository": {
