--- a/packages/atom-cli/package.json
+++ b/packages/atom-cli/package.json
@@ -1,22 +1,18 @@
 {
-  "name": "@lonng/atom-utils",
+  "name": "@lonng/atom-cli",
   "version": "0.0.1",
-  "description": "Atom Utils",
+  "description": "Atom Cli",
   "main": "./dist/index.cjs.js",
   "module": "./dist/index.esm.mjs",
-  "typings": "./dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "clean": "rimraf ./dist",
-    "dev": "node ./build.js -w",
-    "build:bundle": "node ./build.js",
-    "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
-    "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
-    "prepare": "pnpm build"
+    "dev": "node ./build.js -v"
   },
   "exports": {
     ".": {
       "import": "./dist/index.esm.mjs",
-      "require": "./dist/index.d.ts",
+      "require": "./dist/index.cjs.js",
       "types": "./dist/index.d.ts"
     },
     "./*": "./*"
@@ -26,15 +22,18 @@
   ],
   "keywords": [
     "ts",
-    "atom",
-    "component"
+    "vue",
+    "atom"
   ],
   "devDependencies": {
-    "esbuild": "^0.20.2",
     "release-it": "^17.1.1",
-    "typescript": "^5.3.2",
     "rimraf": "^5.0.5"
+  },
+  "dependencies": {
+    "typescript": "^5.3.2",
+    "commander": "^11.1.0"
   },
   "author": "maxuelong",
   "license": "MIT"
+
 }
