--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "packageManager": "pnpm@8.1.0",
   "devDependencies": {
     "eslint": "^9.0.0",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "@types/node": "^20.12.7"
   },
   "repository": {
     "type": "git",
