--- a/packages/atom-cli/package.json
+++ b/packages/atom-cli/package.json
@@ -27,11 +27,18 @@
   ],
   "devDependencies": {
     "release-it": "^17.1.1",
-    "rimraf": "^5.0.5"
+    "rimraf": "^5.0.5",
+    "commander": "^11.1.0",
+    "@types/lodash-es": "4.17.12"
   },
   "dependencies": {
     "typescript": "^5.3.2",
-    "commander": "^11.1.0"
+    "rslog": "^1.2.1",
+    "vite": "^5.2.8",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "lodash-es": "^4.17.21",
+    "esbuild": "^0.20.2"
   },
   "author": "maxuelong",
   "license": "MIT"
