--- a/packages/atom-cli/package.json
+++ b/packages/atom-cli/package.json
@@ -25,12 +25,6 @@
     "vue",
     "atom"
   ],
-  "devDependencies": {
-    "release-it": "^17.1.1",
-    "rimraf": "^5.0.5",
-    "commander": "^11.1.0",
-    "@types/lodash-es": "4.17.12"
-  },
   "dependencies": {
     "typescript": "^5.3.2",
     "rslog": "^1.2.1",
@@ -39,6 +33,19 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "lodash-es": "^4.17.21",
     "esbuild": "^0.20.2"
+  },
+  "devDependencies": {
+    "release-it": "^17.1.1",
+    "rimraf": "^5.0.5",
+    "commander": "^11.1.0",
+    "@types/lodash-es": "4.17.12",
+    "@babel/core": "^7.24.4",
+    "@babel/parser": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@babel/types": "^7.24.0",
+    "@vue/babel-preset-jsx": "^1.4.0",
+    "estree-walker": "^3.0.3"
   },
   "author": "maxuelong",
   "license": "MIT"
